// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Bun.Transpiler using statements work right 1`] = `
"let __bun_temp_ref_1$ = [];
try {
const x = __using(__bun_temp_ref_1$, a, 0);
} catch (__bun_temp_ref_2$) {
var __bun_temp_ref_3$ = __bun_temp_ref_2$, __bun_temp_ref_4$ = 1;
} finally {
__callDispose(__bun_temp_ref_1$, __bun_temp_ref_3$, __bun_temp_ref_4$);
}"
`;

exports[`Bun.Transpiler using statements work right 2`] = `
"let __bun_temp_ref_1$ = [];
try {
const x = __using(__bun_temp_ref_1$, a, 1);
} catch (__bun_temp_ref_2$) {
var __bun_temp_ref_3$ = __bun_temp_ref_2$, __bun_temp_ref_4$ = 1;
} finally {
var __bun_temp_ref_5$ = __callDispose(__bun_temp_ref_1$, __bun_temp_ref_3$, __bun_temp_ref_4$);
__bun_temp_ref_5$ && await __bun_temp_ref_5$;
}"
`;

exports[`Bun.Transpiler using statements work right 3`] = `
"for (const __bun_temp_ref_1$ of b) {
let __bun_temp_ref_2$ = [];
try {
const a = __using(__bun_temp_ref_2$, __bun_temp_ref_1$, 0);
c(a);
} catch (__bun_temp_ref_3$) {
var __bun_temp_ref_4$ = __bun_temp_ref_3$, __bun_temp_ref_5$ = 1;
} finally {
__callDispose(__bun_temp_ref_2$, __bun_temp_ref_4$, __bun_temp_ref_5$);
}
}"
`;

exports[`Bun.Transpiler using statements work right 4`] = `
"for await (const __bun_temp_ref_1$ of b) {
let __bun_temp_ref_2$ = [];
try {
const a = __using(__bun_temp_ref_2$, __bun_temp_ref_1$, 0);
c(a);
} catch (__bun_temp_ref_3$) {
var __bun_temp_ref_4$ = __bun_temp_ref_3$, __bun_temp_ref_5$ = 1;
} finally {
__callDispose(__bun_temp_ref_2$, __bun_temp_ref_4$, __bun_temp_ref_5$);
}
}"
`;

exports[`Bun.Transpiler using statements work right 5`] = `
"for (const __bun_temp_ref_1$ of b) {
let __bun_temp_ref_2$ = [];
try {
const a = __using(__bun_temp_ref_2$, __bun_temp_ref_1$, 1);
c(a);
} catch (__bun_temp_ref_3$) {
var __bun_temp_ref_4$ = __bun_temp_ref_3$, __bun_temp_ref_5$ = 1;
} finally {
var __bun_temp_ref_6$ = __callDispose(__bun_temp_ref_2$, __bun_temp_ref_4$, __bun_temp_ref_5$);
__bun_temp_ref_6$ && await __bun_temp_ref_6$;
}
}"
`;

exports[`Bun.Transpiler using statements work right 6`] = `
"for await (const __bun_temp_ref_1$ of b) {
let __bun_temp_ref_2$ = [];
try {
const a = __using(__bun_temp_ref_2$, __bun_temp_ref_1$, 1);
c(a);
} catch (__bun_temp_ref_3$) {
var __bun_temp_ref_4$ = __bun_temp_ref_3$, __bun_temp_ref_5$ = 1;
} finally {
var __bun_temp_ref_6$ = __callDispose(__bun_temp_ref_2$, __bun_temp_ref_4$, __bun_temp_ref_5$);
__bun_temp_ref_6$ && await __bun_temp_ref_6$;
}
}"
`;

exports[`Bun.Transpiler using statements work right 7`] = `
"for (const __bun_temp_ref_1$ of b) {
let __bun_temp_ref_2$ = [];
try {
const a = __using(__bun_temp_ref_2$, __bun_temp_ref_1$, 0);
c(a);
a(c);
} catch (__bun_temp_ref_3$) {
var __bun_temp_ref_4$ = __bun_temp_ref_3$, __bun_temp_ref_5$ = 1;
} finally {
__callDispose(__bun_temp_ref_2$, __bun_temp_ref_4$, __bun_temp_ref_5$);
}
}"
`;

exports[`Bun.Transpiler using statements work right 8`] = `
"for await (const __bun_temp_ref_1$ of b) {
let __bun_temp_ref_2$ = [];
try {
const a = __using(__bun_temp_ref_2$, __bun_temp_ref_1$, 0);
c(a);
a(c);
} catch (__bun_temp_ref_3$) {
var __bun_temp_ref_4$ = __bun_temp_ref_3$, __bun_temp_ref_5$ = 1;
} finally {
__callDispose(__bun_temp_ref_2$, __bun_temp_ref_4$, __bun_temp_ref_5$);
}
}"
`;

exports[`Bun.Transpiler using statements work right 9`] = `
"for (const __bun_temp_ref_1$ of b) {
let __bun_temp_ref_2$ = [];
try {
const a = __using(__bun_temp_ref_2$, __bun_temp_ref_1$, 1);
c(a);
a(c);
} catch (__bun_temp_ref_3$) {
var __bun_temp_ref_4$ = __bun_temp_ref_3$, __bun_temp_ref_5$ = 1;
} finally {
var __bun_temp_ref_6$ = __callDispose(__bun_temp_ref_2$, __bun_temp_ref_4$, __bun_temp_ref_5$);
__bun_temp_ref_6$ && await __bun_temp_ref_6$;
}
}"
`;

exports[`Bun.Transpiler using statements work right 10`] = `
"for await (const __bun_temp_ref_1$ of b) {
let __bun_temp_ref_2$ = [];
try {
const a = __using(__bun_temp_ref_2$, __bun_temp_ref_1$, 1);
c(a);
a(c);
} catch (__bun_temp_ref_3$) {
var __bun_temp_ref_4$ = __bun_temp_ref_3$, __bun_temp_ref_5$ = 1;
} finally {
var __bun_temp_ref_6$ = __callDispose(__bun_temp_ref_2$, __bun_temp_ref_4$, __bun_temp_ref_5$);
__bun_temp_ref_6$ && await __bun_temp_ref_6$;
}
}"
`;

exports[`Bun.Transpiler using top level 1`] = `
"import { __callDispose as __callDispose, __using as __using } from "bun:wrap";
export function c(e) {
  let __bun_temp_ref_1$ = [];
  try {
    const f = __using(__bun_temp_ref_1$, g(a), 0);
    return f.h;
  } catch (__bun_temp_ref_2$) {
    var __bun_temp_ref_3$ = __bun_temp_ref_2$, __bun_temp_ref_4$ = 1;
  } finally {
    __callDispose(__bun_temp_ref_1$, __bun_temp_ref_3$, __bun_temp_ref_4$);
  }
}
import { using } from "n";
let __bun_temp_ref_5$ = [];
try {
  var a = __using(__bun_temp_ref_5$, b, 0);
  var j = __using(__bun_temp_ref_5$, c(i), 1);
  var k = __using(__bun_temp_ref_5$, l(m), 0);
  var o = __using(__bun_temp_ref_5$, using, 0);
  var p = __using(__bun_temp_ref_5$, await using, 1);
  var q = r;
} catch (__bun_temp_ref_6$) {
  var __bun_temp_ref_7$ = __bun_temp_ref_6$, __bun_temp_ref_8$ = 1;
} finally {
  var __bun_temp_ref_9$ = __callDispose(__bun_temp_ref_5$, __bun_temp_ref_7$, __bun_temp_ref_8$);
  __bun_temp_ref_9$ && await __bun_temp_ref_9$;
}

export {
  k,
  q
};
"
`;
